fix!: move home-logo-btn on recap page to higher z-index

--- a/src/components/RecapProgress/RecapProgress.scss
+++ b/src/components/RecapProgress/RecapProgress.scss
@@ -38,7 +38,7 @@
 }
 
 .home-logo-btn {
-  z-index: 100;
+  z-index: 101;
   position: absolute;
   display: flex;
   top: 0;
